# Copyright (C) 2005-2009 MaNGOS <http://getmangos.com/>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
## Process this file with automake to produce Makefile.in

## Sub-directories to parse

## Change installation location
#  datadir = scriptdev2/sql/updates
pkgdatadir = $(datadir)/scriptdev2/sql/updates

## Files to be installed
#  Install basic SQL files to datadir
pkgdata_DATA = \
	r1453_scriptdev2.sql \
	r1457_scriptdev2.sql \
	r1459_mangos.sql \
	r1460_mangos.sql \
	r1461_mangos.sql \
	r1461_scriptdev2.sql \
	r1463_mangos.sql \
	r1465_scriptdev2.sql \
	r1466_scriptdev2.sql \
	r1470_scriptdev2.sql \
	r1473_scriptdev2.sql \
	r1474_scriptdev2.sql \
	r1476_mangos.sql \
	r1476_scriptdev2.sql \
	r1478_scriptdev2.sql \
	r1486_mangos.sql \
	r1490_scriptdev2.sql \
	r1492_mangos.sql \
	r1493_scriptdev2.sql \
	r1494_mangos.sql \
	r1496_mangos.sql \
	r1498_mangos.sql \
	r1500_mangos.sql \
	r1502_mangos.sql \
	r1503_scriptdev2.sql \
	r1504_scriptdev2.sql \
	r1506_scriptdev2.sql \
	r1508_mangos.sql \
	r1513_scriptdev2.sql \
	r1516_mangos.sql \
	r1516_scriptdev2.sql \
	r1517_scriptdev2.sql \
	r1519_mangos.sql \
	r1523_mangos.sql \
	r1524_scriptdev2.sql \
	r1525_mangos.sql \
	r1525_scriptdev2.sql \
	r1531_mangos.sql \
	r1536_mangos.sql \
	r1538_mangos.sql \
	r1540_mangos.sql \
	r1540_scriptdev2.sql \
	r1542_mangos.sql
