# Copyright (C) 2005-2009 MaNGOS <http://getmangos.com/>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
## Process this file with automake to produce Makefile.in

## Sub-directories to parse

## Change installation location
#  datadir = scriptdev2/sql/updates
pkgdatadir = $(datadir)/scriptdev2/sql/updates

## Files to be installed
#  Install basic SQL files to datadir
pkgdata_DATA = \
	r1543_scriptdev2.sql \
	r1544_mangos.sql \
	r1545_scriptdev2.sql \
	r1548_scriptdev2.sql \
	r1549_mangos.sql \
	r1549_scriptdev2.sql \
	r1551_mangos.sql \
	r1554_mangos.sql \
	r1554_scriptdev2.sql \
	r1555_scriptdev2.sql
