# Copyright (C) 2005-2009 MaNGOS <http://getmangos.com/>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
## Process this file with automake to produce Makefile.in

## Sub-directories to parse

## Change installation location
#  datadir = scriptdev2/sql/updates
pkgdatadir = $(datadir)/scriptdev2/sql/updates

## Files to be installed
#  Install basic SQL files to datadir
pkgdata_DATA = \
	r1543_scriptdev2.sql \
	r1544_mangos.sql \
	r1545_scriptdev2.sql \
	r1548_scriptdev2.sql \
	r1549_mangos.sql \
	r1549_scriptdev2.sql \
	r1551_mangos.sql \
	r1554_mangos.sql \
	r1554_scriptdev2.sql \
	r1555_scriptdev2.sql \
	r1556_mangos.sql \
	r1557_scriptdev2.sql \
	r1563_mangos.sql \
	r1567_mangos.sql \
	r1567_scriptdev2.sql \
	r1570_scriptdev2.sql \
	r1577_mangos.sql \
	r1577_scriptdev2.sql \
	r1583_scriptdev2.sql \
	r1584_scriptdev2.sql \
	r1587_scriptdev2.sql \
	r1589_mangos.sql \
	r1590_mangos.sql \
	r1591_mangos.sql \
	r1592_mangos.sql \
	r1593_mangos.sql \
	r1594_mangos.sql \
	r1595_mangos.sql \
	r1596_mangos.sql \
	r1599_mangos.sql \
	r1600_scriptdev2.sql \
	r1602_mangos.sql \
	r1604_mangos.sql \
	r1605_mangos.sql \
	r1607_mangos.sql \
	r1608_mangos.sql \
	r1615_mangos.sql \
	r1615_scriptdev2.sql \
	r1616_mangos.sql \
	r1617_mangos.sql \
	r1621_scriptdev2.sql \
	r1622_mangos.sql \
	r1622_scriptdev2.sql \
	r1624_mangos.sql \
	r1624_scriptdev2.sql \
	r1627_mangos.sql \
	r1627_scriptdev2.sql \
	r1629_mangos.sql \
	r1629_scriptdev2.sql \
	r1632_mangos.sql \
	r1636_mangos.sql \
	r1637_scriptdev2.sql \
	r1642_scriptdev2.sql \
	r1644_scriptdev2.sql \
	r1647_scriptdev2.sql \
	r1647_mangos.sql \
	r1650_mangos.sql \
	r1651_scriptdev2.sql \
	r1652_scriptdev2.sql \
	r1653_mangos.sql \
	r1658_scriptdev2.sql \
	r1660_scriptdev2.sql \
	r1661_mangos.sql \
	r1662_scriptdev2.sql \
	r1665_mangos.sql \
	r1667_mangos.sql \
	r1667_scriptdev2.sql \
	r1668_mangos.sql \
	r1671_mangos.sql \
	r1671_scriptdev2.sql \
	r1679_mangos.sql \
	r1680_mangos.sql \
	r1681_mangos.sql \
	r1683_scriptdev2.sql \
	r1685_mangos.sql \
	r1685_scriptdev2.sql \
	r1687_mangos.sql \
	r1691_mangos.sql \
	r1694_mangos.sql \
	r1698_mangos.sql \
	r1704_mangos.sql \
	r1705_mangos.sql \
	r1705_scriptdev2.sql \
	r1706_scriptdev2.sql \
	r1711_scriptdev2.sql \
	r1715_mangos.sql \
	r1715_scriptdev2.sql \
	r1720_mangos.sql \
	r1720_scriptdev2.sql \
	r1726_mangos.sql \
	r1727_scriptdev2.sql \
	r1728_mangos.sql \
	r1729_scriptdev2.sql \
	r1734_scriptdev2.sql \
	r1736_scriptdev2.sql \
	r1737_scriptdev2.sql \
	r1741_mangos.sql \
	r1750_scriptdev2.sql \
	r1751_scriptdev2.sql \
	r1752_mangos.sql \
	r1753_scriptdev2.sql \
	r1754_scriptdev2.sql \
	r1759_mangos.sql \
	r1763_mangos.sql \
	r1767_mangos.sql \
	r1771_scriptdev2.sql \
	r1777_scriptdev2.sql \
	r1780_scriptdev2.sql \
	r1782_scriptdev2.sql \
	r1783_scriptdev2.sql \
	r1784_scriptdev2.sql \
	r1785_scriptdev2.sql \
	r1786_scriptdev2.sql \
	r1789_scriptdev2.sql \
	r1791_scriptdev2.sql \
	r1797_mangos.sql \
	r1798_mangos.sql \
	r1800_mangos.sql \
	r1800_scriptdev2.sql \
	r1807_scriptdev2.sql \
	r1810_scriptdev2.sql \
	r1813_mangos.sql \
	r1816_scriptdev2.sql \
	r1818_mangos.sql \
	r1818_scriptdev2.sql \
	r1819_mangos.sql \
	r1822_scriptdev2.sql \
	r1824_mangos.sql \
	r1825_mangos.sql \
	r1825_scriptdev2.sql \
	r1826_mangos.sql \
	r1826_scriptdev2.sql \
	r1827_scriptdev2.sql \
	r1828_scriptdev2.sql \
	r1829_mangos.sql \
	r1830_scriptdev2.sql \
	r1831_scriptdev2.sql \
	r1836_mangos.sql \
	r1842_scriptdev2.sql \
	r1843_mangos.sql \
	r1843_scriptdev2.sql \
	r1844_mangos.sql \
	r1845_mangos.sql \
	r1845_scriptdev2.sql \
	r1850_mangos.sql \
	r1850_scriptdev2.sql \
	r1851_mangos.sql \
	r1852_scriptdev2.sql \
	r1853_mangos.sql \
	r1855_scriptdev2.sql \
	r1858_scriptdev2.sql \
	r1859_mangos.sql \
	r1860_scriptdev2.sql \
	r1862_mangos.sql \
	r1863_mangos.sql \
	r1864_mangos.sql \
	r1864_scriptdev2.sql

