# Copyright (C) 2005-2009 MaNGOS <http://getmangos.com/>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
## Process this file with automake to produce Makefile.in

## Sub-directories to parse

## Change installation location
#  datadir = scriptdev2/sql/updates/0.0.3
pkgdatadir = $(datadir)/scriptdev2/sql/updates/0.0.3

## Files to be installed
#  Install basic SQL files to datadir
pkgdata_DATA = \
	r814_scriptdev2_eventai_scripts.sql \
	r820_scriptdev2_script_texts.sql \
	r822_mangos.sql \
	r822_scriptdev2_script_texts.sql \
	r823_scriptdev2_script_texts.sql \
	r824_mangos.sql \
	r824_scriptdev2_script_texts.sql \
	r825_scriptdev2_script_texts.sql \
	r826_scriptdev2.sql \
	r827_mangos.sql \
	r828_mangos.sql \
	r834_mangos.sql \
	r834_scriptdev2_script_texts.sql \
	r835_mangos.sql \
	r845_mangos.sql \
	r846_scriptdev2.sql \
	r847_scriptdev2_script_texts.sql \
	r848_scriptdev2_script_texts.sql \
	r849_scriptdev2_script_texts.sql \
	r850_mangos.sql \
	r851_scriptdev2_script_texts.sql \
	r852_scriptdev2_script_texts.sql \
	r854_scriptdev2_script_texts.sql \
	r855_scriptdev2_script_texts.sql \
	r856_scriptdev2_script_texts.sql \
	r860_scriptdev2_script_texts.sql \
	r862_scriptdev2_script_texts.sql \
	r863_mangos.sql \
	r872_mangos.sql \
	r883_mangos.sql \
	r895_mangos.sql \
	r900_mangos.sql \
	r903_mangos.sql \
	r903_scriptdev2_script_texts.sql \
	r907_mangos.sql \
	r907_scriptdev2_script_texts.sql \
	r909_mangos.sql \
	r910_scriptdev2_script_texts.sql \
	r912_mangos.sql \
	r912_scriptdev2_script_texts.sql \
	r916_mangos.sql \
	r916_scriptdev2_script_texts.sql \
	r919_mangos.sql \
	r922_scriptdev2_script_waypoint.sql \
	r924_scriptdev2_script_waypoint.sql \
	r936_scriptdev2_script_waypoint.sql \
	r937_mangos.sql \
	r937_scriptdev2_script_texts.sql \
	r937_scriptdev2_script_waypoint.sql \
	r939_scriptdev2_script_texts.sql \
	r940_mangos.sql \
	r941_mangos.sql \
	r945_mangos.sql \
	r945_scriptdev2_script_texts.sql \
	r945_scriptdev2_script_waypoint.sql \
	r947_mangos.sql \
	r949_scriptdev2_script_waypoint.sql \
	r951_scriptdev2_script_waypoint.sql \
	r953_scriptdev2_script_waypoint.sql \
	r956_scriptdev2.sql \
	r963_mangos.sql \
	r964_mangos.sql \
	r965_mangos.sql \
	r965_scriptdev2.sql \
	r972_mangos.sql \
	r972_scriptdev2.sql \
	r973_mangos.sql \
	r973_scriptdev2_script_waypoint.sql \
	r975_mangos.sql \
	r975_scriptdev2.sql \
	r976_mangos.sql \
	r976_scriptdev2.sql \
	r978_mangos.sql \
	r979_mangos.sql \
	r979_scriptdev2_script_texts.sql \
	r980_mangos.sql \
	r982_mangos.sql \
	r982_scriptdev2_script_texts.sql \
	r989_mangos.sql \
	r990_mangos.sql \
	r991_scriptdev2.sql \
	r992_mangos.sql \
	r993_mangos.sql \
	r993_scriptdev2_script_texts.sql \
	r995_mangos.sql \
	r995_scriptdev2.sql \
	r997_mangos.sql \
	r998_mangos.sql \
	r998_scriptdev2_script_texts.sql \
	r1002_scriptdev2.sql \
	r1006_scriptdev2.sql \
	r1008_mangos.sql \
	r1008_scriptdev2.sql \
	r1009_scriptdev2.sql \
	r1010_mangos.sql \
	r1010_scriptdev2.sql \
	r1012_mangos.sql \
	r1012_scriptdev2.sql \
	r1014_mangos.sql \
	r1014_scriptdev2.sql \
	r1016_scriptdev2.sql \
	r1023_scriptdev2.sql \
	r1025_mangos.sql \
	r1030_scriptdev2.sql \
	r1032_mangos.sql \
	r1032_scriptdev2.sql \
	r1039_mangos.sql \
	r1056_scriptdev2.sql \
	r1058_mangos.sql \
	r1058_scriptdev2.sql \
	r1062_mangos.sql \
	r1067_mangos.sql \
	r1068_mangos.sql \
	r1068_scriptdev2.sql \
	r1069_mangos.sql \
	r1073_mangos.sql \
	r1074_scriptdev2.sql \
	r1075_mangos.sql \
	r1080_scriptdev2.sql \
	r1082_mangos.sql \
	r1098_scriptdev2.sql \
	r1099_mangos.sql \
	r1100_mangos.sql \
	r1103_mangos.sql \
	r1104_scriptdev2.sql \
	r1106_mangos.sql \
	r1112_mangos.sql \
	r1116_mangos.sql \
	r1119_mangos.sql \
	r1119_scriptdev2.sql \
	r1120_scriptdev2.sql \
	r1121_mangos.sql \
	r1121_scriptdev2.sql \
	r1123_scriptdev2.sql \
	r1128_mangos.sql \
	r1129_mangos.sql \
	r1129_scriptdev2.sql \
	r1131_mangos.sql \
	r1136_mangos.sql \
	r1136_scriptdev2.sql \
	r1140_scriptdev2.sql \
	r1141_mangos.sql \
	r1145_scriptdev2.sql \
	r1146_scriptdev2.sql \
	r1149_scriptdev2.sql \
	r1152_scriptdev2.sql \
	r1154_mangos.sql \
	r1155_mangos.sql \
	r1169_mangos.sql \
	r1169_scriptdev2.sql \
	r1171_scriptdev2.sql \
	r1173_scriptdev2.sql \
	r1180_mangos.sql \
	r1184_mangos.sql \
	r1197_mangos.sql \
	r1199_mangos.sql \
	r1202_mangos.sql \
	r1202_scriptdev2.sql \
	r1207_mangos.sql \
	r1207_scriptdev2.sql \
	r1210_mangos.sql \
	r1212_mangos.sql \
	r1212_scriptdev2.sql \
	r1215_mangos.sql \
	r1215_scriptdev2.sql \
	r1218_scriptdev2.sql \
	r1221_mangos.sql \
	r1221_scriptdev2.sql \
	r1222_scriptdev2.sql \
	r1234_mangos.sql \
	r1241_scriptdev2.sql \
	r1242_mangos.sql \
	r1242_scriptdev2.sql \
	r1243_mangos.sql \
	r1243_scriptdev2.sql \
	r1249_mangos.sql \
	r1249_scriptdev2.sql \
	r1250_mangos.sql \
	r1250_scriptdev2.sql \
	r1251_scriptdev2.sql \
	r1257_scriptdev2.sql \
	r1258_mangos.sql \
	r1258_scriptdev2.sql \
	r1260_scriptdev2.sql \
	r1261_mangos.sql \
	r1263_mangos.sql \
	r1265_mangos.sql \
	r1265_scriptdev2.sql \
	r1266_mangos.sql \
	r1266_scriptdev2.sql \
	r1280_mangos.sql \
	r1280_scriptdev2.sql \
	r1281_mangos.sql \
	r1282_mangos.sql \
	r1283_mangos.sql \
	r1299_scriptdev2.sql \
	r1300_mangos.sql \
	r1307_mangos.sql \
	r1317_mangos.sql \
	r1317_scriptdev2.sql \
	r1321_mangos.sql \
	r1321_scriptdev2.sql \
	r1322_scriptdev2.sql \
	r1326_scriptdev2.sql \
	r1333_mangos.sql \
	r1334_mangos.sql \
	r1335_scriptdev2.sql \
	r1336_mangos.sql \
	r1336_scriptdev2.sql \
	r1341_scriptdev2.sql \
	r1351_mangos.sql \
	r1351_scriptdev2.sql \
	r1352_mangos.sql \
	r1352_scriptdev2.sql \
	r1354_scriptdev2.sql \
	r1358_mangos.sql \
	r1359_mangos.sql \
	r1359_scriptdev2.sql \
	r1367_mangos.sql \
	r1368_mangos.sql \
	r1369_mangos.sql \
	r1370_mangos.sql \
	r1371_scriptdev2.sql \
	r1374_mangos.sql \
	r1374_scriptdev2.sql \
	r1378_mangos.sql \
	r1378_scriptdev2.sql \
	r1379_mangos.sql \
	r1379_scriptdev2.sql \
	r1380_mangos.sql \
	r1380_scriptdev2.sql \
	r1382_mangos.sql \
	r1383_scriptdev2.sql \
	r1384_scriptdev2.sql \
	r1385_mangos.sql \
	r1385_scriptdev2.sql \
	r1386_mangos.sql \
	r1386_scriptdev2.sql \
	r1388_mangos.sql \
	r1388_scriptdev2.sql \
	r1391_mangos.sql \
	r1391_scriptdev2.sql \
	r1392_mangos.sql \
	r1392_scriptdev2.sql \
	r1394_mangos.sql \
	r1394_scriptdev2.sql \
	r1405_mangos.sql \
	r1405_scriptdev2.sql \
	r1406_mangos.sql \
	r1408_mangos.sql \
	r1408_scriptdev2.sql \
	r1409_mangos.sql \
	r1409_scriptdev2.sql \
	r1410_mangos.sql \
	r1410_scriptdev2.sql \
	r1411_mangos.sql \
	r1411_scriptdev2.sql \
	r1412_mangos.sql \
	r1412_scriptdev2.sql \
	r1413_mangos.sql \
	r1413_scriptdev2.sql \
	r1414_mangos.sql \
	r1414_scriptdev2.sql \
	r1415_mangos.sql \
	r1417_mangos.sql \
	r1418_scriptdev2.sql \
	r1419_mangos.sql \
	r1421_scriptdev2.sql \
	r1422_mangos.sql \
	r1422_scriptdev2.sql \
	r1428_scriptdev2.sql \
	r1430_mangos.sql \
	r1433_mangos.sql \
	r1435_mangos.sql \
	r1436_mangos.sql \
	r1437_scriptdev2.sql \
	r1439_scriptdev2.sql \
	r1441_mangos.sql
